--- a/debian/libgles2-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libgles2-glvnd-nvidia.lintian-overrides.in
@@ -7,7 +7,7 @@ hardening-no-stackprotector
 
 # Packages built against the NVIDIA libGLES should declare dependencies on
 # the free version for Debian's purposes.
-#symbols-declares-dependency-on-other-package libgles2 (*)
+symbols-declares-dependency-on-other-package libgles2 (*)
 symbols-declares-dependency-on-other-package libgles2-mesa
 
 # Do not conflict with the virtual package from src:mesa (<< 17).
