--- a/debian/nvidia-driver.README.Debian.in
+++ b/debian/nvidia-driver.README.Debian.in
@@ -30,13 +30,15 @@ will be kept on non-glvnd until a user manually decides to switch.
 
 To install the glvnd flavour:
 
-  apt install libgl1-nvidia-glvnd-glx nvidia-egl-icd
+  apt install libgl1-glvnd-nvidia-glx libglx0-glvnd-nvidia nvidia-egl-icd
+              libegl1-glvnd-nvidia nvidia-vulkan-common
 
 To install the non-glvnd flavour:
 
-  apt install libgl1-nvidia-glx libegl1-nvidia
+  apt install libgl1-nvidia-glx libegl1-nvidia nvidia-nonglvnd-vulkan-common
 
-And restart the X session.
+And restart the X session. If multiarch (amd64 + i386) is used, also install
+the :i386 version of the lib* packages.
 
 [1] https://github.com/NVIDIA/libglvnd
 
