Correct apt lines to switch from non-glvnd to glvnd installation for 375.82-8
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7628 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver.README.Debian.in
+++ b/debian/nvidia-driver.README.Debian.in
@@ -30,8 +30,7 @@ will be kept on non-glvnd until a user manually decides to switch.
 
 To install the glvnd flavour:
 
-  apt install libgl1-glvnd-nvidia-glx libglx0-glvnd-nvidia nvidia-egl-icd
-              libegl1-glvnd-nvidia nvidia-vulkan-common
+  apt install nvidia-egl-icd nvidia-vulkan-common
 
 To install the non-glvnd flavour:
 
