Rules-Requires-Root: no
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7649 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends:
  libxext6,
  libxvmc1,
  quilt,
+Rules-Requires-Root: no
 Standards-Version: 4.1.1
 Homepage: https://www.nvidia.com
 XS-Autobuild: yes
