fix circular dependency between stamp and generated nvidia_icd.json
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/384@7691 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -78,7 +78,7 @@ AUTOGEN		+= debian/module/debian/changelog
 AUTOGEN		+= $(patsubst %.in,%,$(RENAMED_CONTROL))
 AUTOGEN		+= debian/bug-control
 AUTOGEN		+= debian/substvars
-AUTOGEN		+= $(if $(has_vulkan),NVIDIA-Linux/glvnd/nvidia_icd.json NVIDIA-Linux/nonglvnd/nvidia_icd.json)
+AUTOGEN		+= $(if $(has_vulkan),glvnd/nvidia_icd.json nonglvnd/nvidia_icd.json)
 AUTOKEEP	 = debian/watch
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
 
@@ -116,10 +116,10 @@ unpack-stamp: $(patsubst %,NVIDIA-Linux-%,$(ARCH_LIST))
 
 nvidia_icd.json.template	 = NVIDIA-Linux/nvidia_icd.json.template
 $(nvidia_icd.json.template): unpack-stamp
-NVIDIA-Linux/glvnd/nvidia_icd.json: $(nvidia_icd.json.template)
+glvnd/nvidia_icd.json: $(nvidia_icd.json.template)
 	mkdir -p $(@D)
 	sed 's/__NV_VK_ICD__/libGLX_nvidia.so.0/' $< > $@
-NVIDIA-Linux/nonglvnd/nvidia_icd.json: $(nvidia_icd.json.template)
+nonglvnd/nvidia_icd.json: $(nvidia_icd.json.template)
 	mkdir -p $(@D)
 	sed 's/__NV_VK_ICD__/libGL.so.1/' $< > $@
 
@@ -158,6 +158,7 @@ override_dh_auto_clean:
 	rm -fr .pc
 	rm -f NVIDIA-Linux
 	rm -fr $(foreach a,$(ARCH_LIST),NVIDIA-Linux-$a $(NVIDIA_DIRNAME_$a))
+	rm -fr glvnd nonglvnd
 	rm -fr kernel-source-tree
 	rm -f nvidia.ids nv-kernel.ids nv-readme.ids pci.ids.nvidia*
 	rm -f LICENSE.txt LICENSE.tmp copyright.tmp
