--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends:
  dpkg-dev (>= 1.18.8),
  xz-utils,
  dkms,
+ libvulkan1 (>= 1.0.42),
  libwayland-client0,
  libwayland-server0,
  libxext6 [!ppc64el],
