stop shipping the classic libnvidia-tls.so.*
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7711 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-glcore.install.in
+++ b/debian/libnvidia-glcore.install.in
@@ -1,3 +1,2 @@
 libnvidia-glcore.so.#VERSION#	#LIBDIR#/
-libnvidia-tls.so.#VERSION#	#LIBDIR#/
-tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
+tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/
