--- a/debian/control
+++ b/debian/control
@@ -921,6 +921,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  dkms,
+ libelf-dev [amd64],
  ${nvidia}-kernel-support--v1,
  ${misc:Depends}
 Recommends:
