add libelf-dev dependency, working around #886474
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7751 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -262,6 +262,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
  dkms (>= 2.1),
+ libelf-dev [amd64],
  nvidia-kernel-common (>= 20110213),
  ${misc:Depends}
 Recommends:
