split nv-readme.ids into nv-readme.ids.common and nv-readme.ids.$ARCH
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7769 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -78,6 +78,7 @@ AUTOGEN		+= debian/module/debian/changelog
 AUTOGEN		+= $(patsubst %.in,%,$(RENAMED_CONTROL))
 AUTOGEN		+= debian/bug-control
 AUTOGEN		+= debian/substvars
+AUTOGEN		+= debian/nv-readme.ids
 AUTOGEN		+= $(if $(has_vulkan),glvnd/nvidia_icd.json nonglvnd/nvidia_icd.json)
 AUTOKEEP	 = debian/watch
 AUTOCLEAN	 = $(filter-out $(AUTOKEEP),$(AUTOGEN))
@@ -123,7 +124,10 @@ nonglvnd/nvidia_icd.json: $(nvidia_icd.json.template)
 	mkdir -p $(@D)
 	sed 's/__NV_VK_ICD__/libGL.so.1/' $< > $@
 
-nv-readme.ids: unpack-stamp
+debian/nv-readme.ids: debian/nv-readme.ids.common debian/nv-readme.ids.$(DEB_HOST_ARCH)
+	cat $^ | sort -u > $@
+
+nv-readme.ids: unpack-stamp debian/nv-readme.ids
 	sed	-e '0,/A. Supported\|APPENDIX A: SUPPORTED/d' \
 		-e '0,/Appendix A. Supported\|APPENDIX A: SUPPORTED/d' \
 		-e '0,/^Below\|APPENDIX B/{/ 0x/s/.*  0x\([0-9a-fA-F]\{4\}\).*/10de\1/p; /^.\{41\} [0-9a-fA-F]\{4\} /s/^.\{41\} \([0-9a-fA-F]\{4\}\) .*/10de\1/p};d' \
