nvidia-alternative: trigger register-glx-alternative-nvidia upon removal
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@7789 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-alternative.prerm.in
+++ b/debian/nvidia-alternative.prerm.in
@@ -5,6 +5,7 @@ set -e
 if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ]; then
 
 	update-alternatives --remove nvidia /usr/lib/#PRIVATE#
+	dpkg-trigger --no-await register-glx-alternative-nvidia
 
 fi
 
