--- a/debian/libegl1-nvidia.lintian-overrides.in
+++ b/debian/libegl1-nvidia.lintian-overrides.in
@@ -1,5 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
+[armhf]: spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
