Update commands in README.Debian to switch between [non]glvnd via aptitude
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7832 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver.README.Debian.in
+++ b/debian/nvidia-driver.README.Debian.in
@@ -30,14 +30,16 @@ will be kept on non-glvnd until a user manually decides to switch.
 
 To install the glvnd flavour:
 
-  apt install nvidia-egl-icd nvidia-vulkan-common
+  aptitude install nvidia-driver-libs nvidia-vulkan-common nvidia-driver-libs-nonglvnd- nvidia-nonglvnd-vulkan-common-
 
 To install the non-glvnd flavour:
 
-  apt install libgl1-nvidia-glx libegl1-nvidia nvidia-nonglvnd-vulkan-common
+  aptitude install nvidia-driver-libs-nonglvnd nvidia-nonglvnd-vulkan-common nvidia-driver-libs- nvidia-vulkan-common-
 
 And restart the X session. If multiarch (amd64 + i386) is used, also install
-the :i386 version of the lib* packages.
+the :i386 version of the nvidia-driver-libs* package.
+
+Bumblebee users: only the nonglvnd flavour is supported.
 
 [1] https://github.com/NVIDIA/libglvnd
 
