update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7847 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -5,5 +5,5 @@ create-orig = False
 pristine-tar = False
 compression = gz
 tarball-dir = ../tarballs-nvidia-graphics-drivers
-component = [ 'amd64', 'i386', ]
+component = [ 'amd64', 'i386', 'armhf', ]
 debian-branch = 340
