nvidia-detect: report devices only supported on amd64
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7854 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-detect.install.in
+++ b/debian/nvidia-detect.install.in
@@ -1,3 +1,4 @@
 debian/detect/nvidia-detect	usr/bin/
 #!armhf#debian/detect/*.ids		usr/share/nvidia/
 nvidia.ids			usr/share/nvidia/
+nvidia-amd64.ids		usr/share/nvidia/
