nvidia-detect: make aware of 384.xx in stretch and recommend stretch-backports for newer cards
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7856 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -63,6 +63,11 @@ then
 	VERSIONS[340]=340.76
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-384.ids 2>/dev/null
+then
+	VERSIONS[384]=384.111
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
 then
        	# 999 means current
@@ -147,7 +152,7 @@ fi
 		fi
 	elif grep -q "stretch\|^9" /etc/debian_version
 	then
-		if [[ -n ${VERSIONS[999]} ]]; then
+		if [[ -n ${VERSIONS[384]} ]]; then
 			if [[ -n ${VERSIONS[340]} ]]; then
 				if [[ -n ${VERSIONS[304]} ]]; then
 				       	echo "Your card is supported by all driver versions."
@@ -158,9 +163,15 @@ fi
 				echo "Your card is supported by the default drivers."
 			fi
 			PACKAGE="nvidia-driver"
+		elif [[ -n ${VERSIONS[999]} ]]; then
+			echo "Your card is only supported by the updated drivers from stretch-backports."
+			echo "See https://backports.debian.org for instructions how to use backports."
+			PACKAGE="nvidia-driver/stretch-backports"
 		elif [[ -n ${VERSIONS[998]} ]]; then
-			echo "Your card is only supported on the amd64 platform, using the current drivers."
-			PACKAGE="nvidia-driver:amd64"
+			echo "Your card is only supported on the amd64 platform."
+			echo "Your card is only supported by the updated drivers from stretch-backports."
+			echo "See https://backports.debian.org for instructions how to use backports."
+			PACKAGE="nvidia-driver:amd64/stretch-backports"
 		elif [[ -n ${VERSIONS[340]} ]]; then
 			echo "Your card is only supported up to the 340 legacy drivers series."
 			PACKAGE="nvidia-legacy-340xx-driver"
@@ -197,6 +208,7 @@ fi
 			PACKAGE="nvidia-legacy-340xx-driver"
 		elif [[ -n ${VERSIONS[304]} ]]; then
 			echo "Your card is only supported up to the 304 legacy drivers series."
+			echo "*** THIS END-OF-LIFE THIS DRIVER WILL NOT BE PART OF BUSTER ***"
 			PACKAGE="nvidia-legacy-304xx-driver"
 		elif [[ -n ${VERSIONS[173]} ]]; then
 			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
