--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,6 +1,5 @@
 libGL.so.#VERSION#		#LIBDIR#/#PRIVATE#/
 libnvidia-glcore.so.#VERSION#	#LIBDIR#/
 libnvidia-cfg.so.#VERSION#	#LIBDIR#/#PRIVATE#/
-libnvidia-tls.so.#VERSION#	#LIBDIR#/
-tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
+tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/
 libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
