--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -6,4 +6,4 @@ pristine-tar = False
 compression = gz
 tarball-dir = ../tarballs-nvidia-graphics-drivers
 component = [ 'amd64', 'i386', 'armhf', ]
-debian-branch = 387
+debian-branch = master
